--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Tip.11 When u make a hole on a pizza</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>How AI Models Trade Stocks</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - When Staying Open Becomes Your Motivation</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Your Life Can Be Super | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: The Risk Engine - 18.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>How AI Models Trade Stocks</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5349,7 +5349,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: The Risk Engine - 18.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Navratri & Periods: Can Women Visit Temples? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - When Staying Open Becomes Your Motivation</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Your Life Can Be Super | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Tip.11 When u make a hole on a pizza</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9598,7 +9598,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
